<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_result"
        android:src="@drawable/ic_place_holder"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_gallery"
        android:layout_marginBottom="32dp"/>


    <Button
        android:id="@+id/btn_gallery"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/button_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_analyze"
        app:layout_constraintEnd_toStartOf="@id/btn_camera"
        />

    <Button
        android:id="@+id/btn_camera"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/button_camera"
        app:layout_constraintStart_toEndOf="@id/btn_gallery"
        app:layout_constraintBottom_toTopOf="@id/btn_analyze"
        app:layout_constraintEnd_toEndOf="@id/btn_live"
        />

    <Button
        android:id="@+id/btn_live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_live_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_analyze"
        app:layout_constraintStart_toEndOf="@id/btn_camera"/>

    <Button
        android:id="@+id/btn_analyze"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_analyz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_live_object"/>

    <Button
        android:id="@+id/btn_live_object"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_object_detection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>